--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nyc": "^5.6.0",
     "run-sequence": "^1.1.5",
     "sinon": "^1.17.3",
+    "sinon-as-promised": "^4.0.0",
     "swagger-mock-api": "^1.5.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
