--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "coveralls": "nyc report -r text-lcov | coveralls",
     "start": "gulp && node index.js",
     "test": "nyc ava",
     "report": "nyc report --reporter=html",
@@ -69,6 +70,7 @@
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "coveralls": "^2.11.9",
     "enzyme": "^2.1.0",
     "express": "^4.13.4",
     "lodash": "^4.9.0",
