--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "coveralls": "^2.11.9",
     "enzyme": "^2.1.0",
     "express": "^4.13.4",
+    "history": "1.17.x",
     "lodash": "^4.9.0",
     "path": "^0.12.7",
     "react": "^0.14.7",
@@ -82,6 +83,7 @@
     "react-router": "^2.0.0",
     "redux": "^3.3.1",
     "redux-create-reducer": "^1.1.0",
+    "redux-simple-router": "^1.0.1",
     "redux-thunk": "^1.0.3",
     "tcomb": "^2.7.0",
     "tcomb-form": "^0.9.3"
