--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ss-octopus",
+  "name": "ss-blue-whale-ui",
   "version": "1.0.0",
-  "description": "React, Redux, Hapi, Babel, Browserify, Tcomb, Ava starter app",
+  "description": "",
   "author": "Nate Geslin",
   "repository": {
     "type": "git",
-    "url": "https://github.com/n8rzz/ss-octopus.git"
+    "url": "https://github.com/n8rzz/ss-blue-whale-ui.git"
   },
   "main": "index.js",
   "scripts": {
@@ -81,9 +81,9 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.4",
     "redux": "^3.3.1",
     "redux-create-reducer": "^1.1.0",
-    "redux-simple-router": "^1.0.1",
     "redux-thunk": "^1.0.3",
     "tcomb": "^2.7.0",
     "tcomb-form": "^0.9.3"
