--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "express": "^4.13.4",
     "history": "1.17.x",
     "lodash": "^4.9.0",
+    "moment": "^2.13.0",
     "path": "^0.12.7",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
