--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "coveralls": "nyc report -r text-lcov | coveralls",
     "start": "gulp && node index.js",
-    "test": "nyc ava",
+    "test": "nyc ava --serial",
     "report": "nyc report --reporter=html",
     "coverage": "npm test && nyc check-coverage --lines 90"
   },
