Adds sass tools and boilerplate scss * Adds globalTasks file with clean tasks * Adds sass-lint

--- a/package.json
+++ b/package.json
@@ -49,9 +49,14 @@
     "eslint-plugin-react": "3.2.x",
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-connect": "^3.1.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-sass-lint": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
+    "history": "1.17.x",
     "jest-cli": "^0.5.8",
+    "js-yaml": "^3.6.1",
     "nock": "^7.2.2",
     "nyc": "^5.6.0",
     "run-sequence": "^1.1.5",
@@ -74,7 +79,7 @@
     "coveralls": "^2.11.9",
     "enzyme": "^2.1.0",
     "express": "^4.13.4",
-    "history": "1.17.x",
+    "fs": "0.0.2",
     "lodash": "^4.9.0",
     "moment": "^2.13.0",
     "path": "^0.12.7",
@@ -87,6 +92,7 @@
     "redux": "^3.3.1",
     "redux-create-reducer": "^1.1.0",
     "redux-thunk": "^1.0.3",
+    "sass-lint": "^1.7.0",
     "tcomb": "^2.7.0",
     "tcomb-form": "^0.9.3"
   },
