Adds Navigation component * Adds folders for Alert and layout * Adds left sidebar and sidebar width vars * Updates sass-lint rules

--- a/sass-lint.yml
+++ b/sass-lint.yml
@@ -204,7 +204,7 @@ rules:
     - 2
     -
       allow-leading-underscore: false
-      convention: ^[a-zA-Z\_]+$
+      convention: ^[a-zA-Z0-9\_]+$
   zero-unit:
     - 1
     -
