--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "faker": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-bump": "^2.1.0",
     "gulp-connect": "^3.1.0",
+    "gulp-git": "^1.7.1",
     "gulp-sass": "^2.3.1",
     "gulp-sass-lint": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
