--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "classnames": "^2.2.5",
     "coveralls": "^2.11.9",
     "enzyme": "^2.1.0",
     "express": "^4.13.4",
