Adds AuthenticationMiddleware * Adds unauthorizedSession action and tests * Updates ErrorType.data to be t.maybe() * Adds localStorage mock and makes it available globally for tests

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "verbose": true,
     "require": [
       "babel-core/register",
-      "./spec/specHelper/globalConfig"
+      "./spec/specHelper/globalConfig",
+      "./spec/specHelper/localStorageMock"
     ]
   },
   "nyc": {
