--- a/sass-lint.yml
+++ b/sass-lint.yml
@@ -51,7 +51,7 @@ rules:
     - 1
     -
       include: true
-  force-attribute-nesting: 2
+  force-attribute-nesting: 0
   force-element-nesting: 2
   force-pseudo-nesting: 0
   function-name-format:
@@ -113,7 +113,7 @@ rules:
   no-qualifying-elements:
     - 1
     -
-      allow-element-with-attribute: false
+      allow-element-with-attribute: true
       allow-element-with-class: false
       allow-element-with-id: false
   no-trailing-zero: 1
